@@ -61,10 +61,7 @@ public class MapperClienteToDTO {
 		}
 
 		return cliente.getOrdini().stream()
-				.map(ordine -> new OrdineDTO(ordine.getIdOrdine(), ordine.getDataOrdine(),
-						formatDataOrdine(ordine.getDataOrdine()), ordine.getTotaleImporto(), ordine.getSpedito(), null,
-						mapProdotti(ordine)))
-				.collect(Collectors.toList());
+				.map(ordine -> new OrdineDTO.Builder().build()).toList(); // da sistemare
 	}
 
 	public static List<ProdottoDTO> mapProdotti(Ordine ordine) {
